Salesforce CPQ/main/default/objects/Localization__c/Localization__c.object-meta.xml
<CustomObject>
    <customHelpPage>LocalizationHelp</customHelpPage>
    <label>Localization</label>
    <nameField>
        <displayFormat>L-{00000}</displayFormat>
        <label>Localization Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Localizations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>