Salesforce CPQ/main/default/objects/Localization__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>To describe where the text is located</description>
    <inlineHelpText>To describe where the text is located</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>