Salesforce CPQ/main/default/objects/Localization__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <description>This action’s label in the UI.</description>
    <inlineHelpText>This action’s label in the UI.</inlineHelpText>
    <label>Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>