Salesforce CPQ/main/default/objects/Localization__c/fields/LongTextArea__c.field-meta.xml
<CustomField>
    <fullName>LongTextArea__c</fullName>
    <description>This field stores translations for Long Text fields.</description>
    <inlineHelpText>This field stores translations for Long Text fields.</inlineHelpText>
    <label>Long Text Area</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>