Salesforce CPQ/main/default/objects/Localization__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The product related to this content.</description>
    <inlineHelpText>The product related to this content.</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Localizations</relationshipLabel>
    <relationshipName>Localizations</relationshipName>
    <type>Lookup</type>
</CustomField>