Salesforce CPQ/main/default/objects/Localization__c/fields/ProductOption__c.field-meta.xml
<CustomField>
    <fullName>ProductOption__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The product option that generated this line.</description>
    <inlineHelpText>The product option that generated this line.</inlineHelpText>
    <label>Product Option</label>
    <referenceTo>ProductOption__c</referenceTo>
    <relationshipLabel>Localizations</relationshipLabel>
    <relationshipName>Localizations</relationshipName>
    <type>Lookup</type>
</CustomField>