Salesforce CPQ/main/default/objects/Localization__c/fields/QuoteTerm__c.field-meta.xml
<CustomField>
    <fullName>QuoteTerm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The parent term for this term.</description>
    <inlineHelpText>The parent term for this term.</inlineHelpText>
    <label>Quote Term</label>
    <referenceTo>QuoteTerm__c</referenceTo>
    <relationshipLabel>Localizations</relationshipLabel>
    <relationshipName>Localizations</relationshipName>
    <type>Lookup</type>
</CustomField>