Salesforce CPQ/main/default/objects/Localization__c/fields/Text__c.field-meta.xml
<CustomField>
    <fullName>Text__c</fullName>
    <description>This field stores translations for Text fields.</description>
    <inlineHelpText>This field stores translations for Text fields.</inlineHelpText>
    <label>Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>