Salesforce CPQ/main/default/objects/Localization__c/fields/TextArea__c.field-meta.xml
<CustomField>
    <fullName>TextArea__c</fullName>
    <description>This field stores translations for Text Area fields.</description>
    <inlineHelpText>This field stores translations for Text Area fields.</inlineHelpText>
    <label>Text Area</label>
    <type>TextArea</type>
</CustomField>