Salesforce CPQ/main/default/objects/Localization__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Language__c</columns>
    <columns>Label__c</columns>
    <columns>APIName__c</columns>
    <columns>QuoteTemplate__c</columns>
    <columns>LineColumn__c</columns>
    <columns>Product__c</columns>
    <columns>ProductOption__c</columns>
    <columns>ProductFeature__c</columns>
    <columns>QuoteTerm__c</columns>
    <columns>Text__c</columns>
    <columns>TextArea__c</columns>
    <columns>LongTextArea__c</columns>
    <columns>RichTextArea__c</columns>
    <columns>UserDefined__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>